--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="logo">
         <img
-          src="./Resources/capstone_colmar_assets/images/ic-logo.svg"
+          src="/Resources/capstone_colmar_assets/images/ic-logo.svg"
           alt="Colmar Academy Logo"
         />
         <span>COLMAR</span>
