--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <header>
       <div class="logo">
         <img
-          src="/Resources/capstone_colmar_assets/images/ic-logo.svg"
-          alt="Colmar Academy Logo"
-        />
+          src="./resources/capstone_colmar_assets/images/ic-logo.svg"
+          alt="Colmar Academy Logo">
         <span>COLMAR</span>
         <span>ACADEMY</span>
       </div>
@@ -36,9 +35,8 @@
     <!-- Banner Section -->
     <section class="banner">
       <img
-        src="./Resources/capstone_colmar_assets/images/banner.jpg"
-        alt="Students studying at a table"
-      />
+        src="./resources/capstone_colmar_assets/images/banner.jpg"
+        alt="Students studying at a table">
       <div class="banner-content">
         <h1>Learn something new everyday</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -50,9 +48,8 @@
     <section class="information">
       <div class="main-info">
         <img
-          src="./Resources/capstone_colmar_assets/images/information-main.jpg"
-          alt="Man reading a book"
-        />
+          src="./resources/capstone_colmar_assets/images/information-main.jpg"
+          alt="Man reading a book">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>
           "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
@@ -65,9 +62,8 @@
       <div class="info-cards">
         <div class="info-card">
           <img
-            src="./Resources/capstone_colmar_assets/images/information-orientation.jpg"
-            alt="People walking on path"
-          />
+            src="./resources/capstone_colmar_assets/images/information-orientation.jpg"
+            alt="People walking on path">
           <div class="info-text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -76,9 +72,8 @@
         </div>
         <div class="info-card">
           <img
-            src="./Resources/capstone_colmar_assets/images/information-campus.jpg"
-            alt="Campus room"
-          />
+            src="./resources/capstone_colmar_assets/images/information-campus.jpg"
+            alt="Campus room">
           <div class="info-text">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
@@ -87,9 +82,8 @@
         </div>
         <div class="info-card">
           <img
-            src="./Resources/capstone_colmar_assets/images/information-guest-lecture.jpg"
-            alt="Oliver Sack"
-          />
+            src="./resources/capstone_colmar_assets/images/information-guest-lecture.jpg"
+            alt="Oliver Sack">
           <div class="info-text">
             <h3>Our guest lecture</h3>
             <p>
@@ -108,8 +102,7 @@
         <div class="course-card">
           <img
             src="./Resources/capstone_colmar_assets/images/course-software.jpg"
-            alt="Computer screens"
-          />
+            alt="Computer screens">
           <h3>Software engineering</h3>
           <p>COURSES</p>
           <p>Web Development, Mobile Development, iOT, APIs</p>
@@ -117,8 +110,7 @@
         <div class="course-card">
           <img
             src="./Resources/capstone_colmar_assets/images/course-computer-art.jpg"
-            alt="Mobile phone"
-          />
+            alt="Mobile phone">
           <h3>Computer art</h3>
           <p>COURSES</p>
           <p>
@@ -129,8 +121,7 @@
         <div class="course-card">
           <img
             src="./Resources/capstone_colmar_assets/images/course-design.jpg"
-            alt="Person holding camera"
-          />
+            alt="Person holding camera">
           <h3>Design</h3>
           <p>COURSES</p>
           <p>User Experience Design, User Research, Visual Design</p>
@@ -138,8 +129,7 @@
         <div class="course-card">
           <img
             src="./Resources/capstone_colmar_assets/images/course-data.jpg"
-            alt="Laptop with graphs"
-          />
+            alt="Laptop with graphs">
           <h3>Data</h3>
           <p>COURSES</p>
           <p>Data Science, Big Data, SQL, Data Visualization</p>
@@ -147,8 +137,7 @@
         <div class="course-card">
           <img
             src="./Resources/capstone_colmar_assets/images/course-business.jpg"
-            alt="Chess pieces"
-          />
+            alt="Chess pieces">
           <h3>Business</h3>
           <p>COURSES</p>
           <p>Product Development, Business Development, Startup</p>
@@ -156,8 +145,7 @@
         <div class="course-card">
           <img
             src="./Resources/capstone_colmar_assets/images/course-marketing.jpg"
-            alt="Smart watch"
-          />
+            alt="Smart watch">
           <h3>Marketing</h3>
           <p>COURSES</p>
           <p>Analytics, Content Marketing, Mobile Marketing</p>
@@ -173,8 +161,7 @@
           <video controls>
             <source
               src="./Resources/capstone_colmar_assets/videos/thesis.mp4"
-              type="video/mp4"
-            />
+              type="video/mp4">
             Your browser does not support the video tag.
           </video>
           <h3>Reimagine urban</h3>
@@ -189,8 +176,7 @@
           <div class="thesis-card">
             <img
               src="./Resources/capstone_colmar_assets/images/thesis-fisma.jpg"
-              alt="Person designing"
-            />
+              alt="Person designing">
             <div class="thesis-text">
               <h3>Fisma: Design and Prototype</h3>
               <p>Designer showcase of new prototype product</p>
@@ -199,8 +185,7 @@
           <div class="thesis-card">
             <img
               src="./Resources/capstone_colmar_assets/images/thesis-now-and-then.jpg"
-              alt="New York skyline"
-            />
+              alt="New York skyline">
             <div class="thesis-text">
               <h3>Now and then</h3>
               <p>Research study about New York</p>
